--- a/index.tex
+++ b/index.tex
@@ -88,16 +88,32 @@ project}\label{the-causal-logic-of-your-project}}
 
 Fundamentally, the resident research project is an effort to gather
 causal evidence for the claim that a particular treatment or way of
-utilizing medicine ``worked'' by being more effective than a rival. To
-plan data collection for the strongest causal evidence is the purpose of
-research design \citep{CampbellStanley1963}. The ideal research design
-would be a pure experiment with random assignment. Because the resident
-research does not randomly assign patients to conditions, it falls under
-the category of \emph{\textbf{quasi-experiment}} which means it is more
-vulnerable to threats to validity.
+utilizing medicine ``worked'' by being more effective than a rival or
+pre-existing treatment. To plan data collection for the strongest causal
+evidence is the purpose of research design \citep{CampbellStanley1963}.
+
+The ideal research design would be a pure experiment with random
+assignment. The resident would randomly assign patients to treatment and
+control conditions, then compare outcomes following treatment. In such a
+scenario the resident could attribute any significant difference in
+outcomes to the treatment because the groups would differ only by chance
+in all other ways. Any pre-existing differences would be statistically
+insignificant.
+
+Because the resident cannot randomly assign patients to conditions going
+forward, the project falls under the category of
+\emph{\textbf{quasi-experiment}}. This means it is more vulnerable to
+confounding explanations of any difference in outcomes.
 
 The resident research project will culminate in a comparison between two
-groups: a pre-implementation group and a post-implementation group.
+groups: a pre-implementation group and a post-implementation group. One
+difference between the groups is time, and recent history has made a big
+difference. Compare a pre-implementation group from the onset of the
+pandemic with a high incidence of COVID-19 to a more recent
+post-implementation group with much lower incidence of the virus. This
+difference between the two groups in COVID-19 infection may combine with
+the difference in drug dosing to influence treatment outcomes. This
+difference in COVID-19 infection could therefore be a \emph{confound}.
 
 \hypertarget{how-many-patients}{%
 \section{How many patients?}\label{how-many-patients}}
