--- a/index.tex
+++ b/index.tex
@@ -113,7 +113,24 @@ pandemic with a high incidence of COVID-19 to a more recent
 post-implementation group with much lower incidence of the virus. This
 difference between the two groups in COVID-19 infection may combine with
 the difference in drug dosing to influence treatment outcomes. This
-difference in COVID-19 infection could therefore be a \emph{confound}.
+difference in COVID-19 infection could therefore be a
+\emph{\textbf{confound}}.
+
+The point is to clarify:
+
+\begin{itemize}
+\tightlist
+\item
+  What is the outcome to improve? This is the dependent variable.
+\item
+  What is the difference in treatment intended to cause the improvement
+  in the post-implementation group? This is the independent variable.
+\item
+  All other variables are control variables. They should differ only by
+  chance. If there is a noticeable pre-existing difference, and the
+  level of that factor in one group affects the outcome, it is a
+  confound.
+\end{itemize}
 
 \hypertarget{how-many-patients}{%
 \section{How many patients?}\label{how-many-patients}}
