--- a/index.tex
+++ b/index.tex
@@ -169,6 +169,13 @@ reliably detect.
 \caption{Power Analysis}
 \end{figure}
 
+Power is a function of sample size, effect size, and statistical
+significance. Figure @ref(fig:power) is a plot of power rates against
+these other variables. A large effect (r \textasciitilde{} 0.5) is
+detectable with a sample of any size. But only large samples have the
+power to detect a statistically significant (p \textless{} .05) small
+correlation (r = 0.1).
+
 \hypertarget{collecting-your-data}{%
 \chapter{Collecting your Data}\label{collecting-your-data}}
 
