--- a/index.tex
+++ b/index.tex
@@ -36,8 +36,8 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={Data Support for Swedish Pharmacy Residents},
-  pdfauthor={Jack B. Huber, Ph.D.},
+  pdftitle={Data Support for the Swedish Pharmacy Resident Research Project},
+  pdfauthor={Jack B. Huber, Ph.D.; Clinical Data Coordinator},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
@@ -65,12 +65,14 @@
 \usepackage[]{natbib}
 \bibliographystyle{plainnat}
 
-\title{Data Support for Swedish Pharmacy Residents}
-\author{Jack B. Huber, Ph.D.}
+\title{Data Support for the Swedish Pharmacy Resident Research Project}
+\author{Jack B. Huber, Ph.D. \and Clinical Data Coordinator}
 \date{May 2022}
 
 \begin{document}
 \maketitle
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
 \hypertarget{purpose-of-this-document}{%
 \chapter{Purpose of this Document}\label{purpose-of-this-document}}
@@ -78,6 +80,8 @@
 The purpose of this document is to assemble some advice and resources to
 support Swedish Pharmacy residents in their journey from project
 proposal to a completed research project.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
 \hypertarget{planning-your-project}{%
 \chapter{Planning your Project}\label{planning-your-project}}
@@ -136,11 +140,14 @@ The point is to clarify:
 \section{How many patients?}\label{how-many-patients}}
 
 Possibly the most pressing question for resident research projects is:
-How many patients do I need? The resident research project will
-culiminate in a series of comparisons between the pre-implementation and
-post-implementation groups. Outcomes of the two samples will differ by
-at least some quantity. The resident researcher expresses this
-difference as an effect, like this:
+\textbf{How many patients do I need?}
+
+The resident research project will culiminate in a series of comparisons
+between the pre-implementation and post-implementation groups. Outcomes
+of the two samples will differ by at least some quantity. The resident
+researcher expresses this difference as an effect, like this:
+
+{[}insert table about here{]}
 
 Assume that this effect suggests more favorable outcomes for the
 post-implementation group. This effect raises several questions:
@@ -166,7 +173,7 @@ reliably detect.
 \begin{figure}
 \centering
 \includegraphics{index_files/figure-latex/power-1.pdf}
-\caption{Power Analysis}
+\caption{Plot of Power Curves}
 \end{figure}
 
 This a plot of power rates against these other variables. A large effect
@@ -306,23 +313,15 @@ Is it\ldots{}
   comparing two different quantities of time.
 \end{itemize}
 
-\hypertarget{odds-ratios}{%
-\subsection{Odds ratios}\label{odds-ratios}}
+\textbf{Odds ratios / Logistic regression}.
 
-\hypertarget{chi-square-test-of-independence}{%
-\subsection{Chi-square test of
-independence}\label{chi-square-test-of-independence}}
+\textbf{Chi-square test of independence}.
 
-\hypertarget{two-sample-t-test}{%
-\subsection{Two-sample t-test}\label{two-sample-t-test}}
+\textbf{Two-sample t-test}.
 
-\hypertarget{z-test-of-the-difference-of-proportions}{%
-\subsection{Z test of the difference of
-proportions}\label{z-test-of-the-difference-of-proportions}}
+\textbf{Z test of the difference of proportions}.
 
-\hypertarget{cohens-d-effect-size}{%
-\subsection{\texorpdfstring{Cohen's \emph{d} effect
-size}{Cohen's d effect size}}\label{cohens-d-effect-size}}
+\textbf{Cohen's \emph{d} effect size}.
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
